zh_CN doc fixes
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1839 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/zh_CN/gettingstarted.html
+++ b/www/zh_CN/gettingstarted.html
@@ -28,7 +28,7 @@
 
         <h3>使用“应用程序”窗口</h3>
         <p>在启动应用程序后，将打开 VisualVM 的主窗口。缺省情况下，“应用程序”窗口显示在主窗口的左窗格中。在“应用程序”窗口中，可以快速查看本地和远程 JVM 上运行的 Java 应用程序。</p>
-        <img src="images/getstarted/vvm-anagram-applications.png" style="border:1px solid;" alt="屏幕快照：“应用程序”窗口" 
+        <img src="../images/getstarted/vvm-anagram-applications.png" style="border:1px solid;" alt="屏幕快照：“应用程序”窗口"
         title="屏幕快照：“应用程序”窗口">
         <p>“应用程序”窗口是查看特定应用程序详细信息的主入口点。右键单击应用程序节点将打开弹出式菜单，从该弹出式菜单中可以选择是打开主应用程序标签，还是生成线程 dump 或堆 dump。</p>
 
@@ -53,7 +53,7 @@
             <li>双击某个类名打开“实例”视图，以查看实例列表。</li>
             <li>从列表中选择某个实例，以查看对该实例的引用。</li>
         </ol>
-        <img src="images/getstarted/vvm-anagram-heapdump.png" style="border:1px solid;" alt="屏幕快照：堆 dump 的“实例”标签" 
+        <img src="../images/getstarted/vvm-anagram-heapdump.png" style="border:1px solid;" alt="屏幕快照：堆 dump 的“实例”标签"
         title="屏幕快照：堆 dump 的“实例”标签">
         
         <p>在生成堆 dump 后，VisualVM 将在新标签中打开该堆 dump，并在“应用程序”窗口中的应用程序节点下为该堆 dump 创建一个节点。要保存生成的堆 dump，请右键单击该堆 dump 节点，然后选择“另存为”。如果没有明确保存生成的堆 dump，则在应用程序关闭时将删除该 dump。</p>
@@ -75,7 +75,7 @@
             <p>在选择性能分析任务后，VisualVM 将在 &quot;Profiler&quot; 标签中显示性能分析数据。</p>
             </li>
         </ol>
-        <img src="images/getstarted/vvm-anagram-profiler.png" style="border:1px solid;" alt="屏幕快照：包含性能分析结果的 &quot;Profiler&quot; 标签" 
+        <img src="../images/getstarted/vvm-anagram-profiler.png" style="border:1px solid;" alt="屏幕快照：包含性能分析结果的 &quot;Profiler&quot; 标签"
         title="屏幕快照：分析内存分配时显示的性能分析结果">
 
       
@@ -95,7 +95,7 @@
         </ol>
         <p>单击“确定”后，将在“远程”节点下显示远程主机的节点。展开远程主机节点可查看远程主机上运行的 Java 应用程序。</p>
         <p>您可以双击远程应用程序的名称，在 VisualVM 中打开该应用程序标签。</p>
-        <img src="images/getstarted/vvm-applications-remote.png" style="border:1px solid;" alt="屏幕快照：包含远程主机的“应用程序”窗口" 
+        <img src="../images/getstarted/vvm-applications-remote.png" style="border:1px solid;" alt="屏幕快照：包含远程主机的“应用程序”窗口"
         title="屏幕快照：包含远程主机的“应用程序”窗口">
 
         <p>有关更多信息，请参见以下文档：</p>
@@ -111,7 +111,7 @@
             <li>在“可用插件”标签中，选中该插件的“安装”复选框。单击“安装”。</li>
             <li>逐步完成插件安装程序。<br/>
         </ol>        
-        <img src="images/getstarted/vvm-plugins-window.png" alt="屏幕快照：“插件”窗口" 
+        <img src="../images/getstarted/vvm-plugins-window.png" alt="屏幕快照：“插件”窗口"
         title="屏幕快照：“插件”窗口">
         <p class="small">该屏幕快照显示了选中 VisualVM-MBeans 插件的“插件”管理器。</p>
 
