--- a/www/ja/intro.html
+++ b/www/ja/intro.html
@@ -24,7 +24,7 @@
         <h2>VisualVM のウィンドウ</h2>
         <p>VisualVM を起動すると、VisualVM のメインウィンドウが開きます。VisualVM のメインウィンドウは、2 つのウィンドウに分かれています。
         </p>
-        <img src="../images/docs/vvm-start.png" style="border:1px solid;" alt="開始画面がある VisualVM ウィンドウのスクリーンショット" 
+        <img src="images/docs/vvm-start.png" style="border:1px solid;" alt="開始画面がある VisualVM ウィンドウのスクリーンショット" 
         title="開始画面がある VisualVM ウィンドウのスクリーンショット" width="600" height="430"  />
         <p>最初に VisualVM を起動すると、ウィンドウの左側に「アプリケーション」ウィンドウが表示され、メインウィンドウの右側に開始ページが表示されます。開始ページには、VisualVM のドキュメントの Web ページと追加リソースへのリンクがあります。<br />
         <b>注:</b> 開始ページは、デフォルトでは VisualVM を起動するたびに開きます。メインメニューから「ヘルプ」&gt;「開始ページ」を選択すると、いつでも開始ページを表示できます。「起動時に表示」チェックボックスを選択解除して、開始ページを非表示にすることもできます。 </p>
@@ -68,7 +68,7 @@
             <li>「Available Plugins」タブで、プラグインの「Install」チェックボックスを選択します。「インストール」をクリックします。</li>
             <li>手順を続行してプラグインのインストーラを完了します。<br/>
         </ol>        
-        <img src="../images/getstarted/vvm-plugins-window.png" alt="「プラグイン」ウィンドウのスクリーンショット" 
+        <img src="images/getstarted/vvm-plugins-window.png" alt="「プラグイン」ウィンドウのスクリーンショット" 
         title="「プラグイン」ウィンドウのスクリーンショット">
         
         
