--- a/www/zh_CN/intro.html
+++ b/www/zh_CN/intro.html
@@ -24,7 +24,7 @@
         <h2>VisualVM 窗口</h2>
         <p>在启动 VisualVM 后，将打开 VisualVM 主窗口。VisualVM 主窗口分为两个窗口。
         </p>
-        <img src="../images/docs/vvm-start.png" style="border:1px solid;" alt="屏幕快照：包含起始屏幕的 VisualVM 窗口"
+        <img src="images/docs/vvm-start.png" style="border:1px solid;" alt="屏幕快照：包含起始屏幕的 VisualVM 窗口" 
         title="屏幕快照：包含起始屏幕的 VisualVM 窗口" width="600" height="430"  />
         <p>首次启动 VisualVM 时，“应用程序”窗口显示在主窗口的左侧，“起始页”显示在主窗口的右侧。“起始页”包含指向 VisualVM 文档 Web 页和其他资源的链接。<br />
         <b>注意：</b>缺省情况下，每次启动 VisualVM 时都将打开“起始页”。通过从主菜单中选择“帮助”&gt;“起始页”，可以随时打开“起始页”。此外，还可以通过取消选中“启动时显示”复选框隐藏“起始页”。 </p>
@@ -68,7 +68,7 @@
             <li>在“可用插件”标签中，选中该插件的“安装”复选框。单击“安装”。</li>
             <li>逐步完成插件安装程序。<br/>
         </ol>        
-        <img src="../images/getstarted/vvm-plugins-window.png" alt="屏幕快照：“插件”窗口"
+        <img src="images/getstarted/vvm-plugins-window.png" alt="屏幕快照：“插件”窗口" 
         title="屏幕快照：“插件”窗口">
         
         
