VisualVM 1.1.1 multi-language release
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1843 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/download.html
+++ b/www/download.html
@@ -53,6 +53,7 @@
             <h3>Download</h3>
             <div style="background: #f0f1f2; padding: 10px; padding-left: 20px; margin-bottom: 10px;">
                 <div><a href="https://visualvm.dev.java.net/files/documents/7163/127064/visualvm_111.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM 1.1.1</span></a> (.zip, 8.8MB)<span style="margin-left: 15px; margin-right: 15px;">|</span>IDE integration: <a href="eclipse-launcher.html">Eclipse IDE</a>, <a href="http://plugins.intellij.net/plugin/?id=3749">IntelliJ IDEA</a> <small>(3<sup>rd</sup> party)</small></div>
+                <div style="padding-top: 5px;"><font size="-1"><a href="https://visualvm.dev.java.net/files/documents/7163/131458/visualvm_111-ml.zip"><b>Multi-language</b></a> (.zip, 9.7MB, en/ja/zh_CN)</font></div>
             </div>
             
             <a style="clear: both;" name="first_steps"></a>
