--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,10 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">February 5th, 2009:</span> VisualVM-Extensions plugin has been updated to correctly recognize applications running on JDK 6 Update 12.
+                    The update is available on Plugin Center for all affected VisualVM / Java VisualVM versions. Use Tools -> Plugins to download and install the update.
+                </p>
+
                 <p><span class="news_date">January 8th, 2009:</span> Thread Dump Analyzer plugin has been updated on the VisualVM 1.1 and 1.0.1 Plugin Centers to version 2.1.
                     Detailed information about the tool can be found in the <a href="http://www.jroller.com/dumpster/entry/tda_2_1_released">TDA 2.1 release announcement</a>.
                 </p>
