--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,12 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">April 1st, 2009:</span> Multi-language version of VisualVM 1.1.1 released, now supports
+                    Japanese (ja) and Simplified Chinese (zh_CN). Also the Introduction to VisualVM (<a href="https://visualvm.dev.java.net/ja/intro.html">ja</a>, <a href="https://visualvm.dev.java.net/zh_CN/intro.html">cn</a>) and
+                    Getting Started with VisualVM (<a href="https://visualvm.dev.java.net/ja/gettingstarted.html">ja</a>, <a href="https://visualvm.dev.java.net/zh_CN/gettingstarted.html">cn</a>) documents have been translated.
+                    The localized build can be downloaded from the <a href="download.html">Download</a> page.
+                </p>
+
                 <p><span class="news_date">February 23rd, 2009:</span> Visual GC Plugin 2.0 is now available for all VisualVM / Java VisualVM releases via the Plugin Center.
                     More information about the tool can be found on <a href="http://java.sun.com/performance/jvmstat/visualgc.html">Visual GC home page</a>.
                 </p>
@@ -57,10 +63,6 @@
                 <p><span class="news_date">February 17th, 2009:</span> VisualVM 1.1.1 released. This is mostly a bugfix release, see the <a href="https://visualvm.dev.java.net/issues/buglist.cgi?Submit+query=Submit+query&component=visualvm&resolution=FIXED&target_milestone=1.1.1&email1=&emailtype1=exact&emailassigned_to1=1&email2=&emailtype2=exact&emailreporter2=1&issueidtype=include&issue_id=&changedin=&votes=&chfield=creation_ts&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=&short_desc_type=fulltext&long_desc=&long_desc_type=fulltext&issue_file_loc=&issue_file_loc_type=fulltext&status_whiteboard=&status_whiteboard_type=fulltext&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&order=Reuse+same+sort+as+last+time">list of enhancements and fixed bugs</a>.
                     Memory Sampler Plugin has been introduced and Visual GC integration has been significantly improved in this release, see the <a href="plugins.html">plugins</a> page for more. The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
                     <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release111"><code>release111</code></a> branch.
-                </p>
-
-                <p><span class="news_date">February 5th, 2009:</span> VisualVM-Extensions plugin has been updated to correctly recognize applications running on JDK 6 Update 12.
-                The update is available on Plugin Center for all affected VisualVM / Java VisualVM versions. Use Tools -> Plugins to download and install the update.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
