Links to localized documents
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1846 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -6,6 +6,11 @@
     <body>
         <h1>Getting Started with VisualVM</h1>
         <hr>
+
+        <p>
+            <small>Note: this page is also available in <a href="ja/gettingstarted.html">Japanese</a> and <a href="zh_CN/gettingstarted.html">Simplified Chinese</a>.</small>
+        </p>
+
         <p>VisualVM provides detailed information about Java applications while they are running on the Java Virutal Machine (JVM). 
         VisualVM's graphical user interface enables you to quickly and easily see information about multiple Java applications.</p>
         
