--- a/www/intro.html
+++ b/www/intro.html
@@ -6,6 +6,11 @@
     <body>
         <h1>Introduction to VisualVM</h1>
         <hr />
+
+        <p>
+            <small>Note: this page is also available in <a href="ja/intro.html">Japanese</a> and <a href="zh_CN/intro.html">Simplified Chinese</a>.</small>
+        </p>
+
         <p>VisualVM is a tool that provides a visual interface for viewing detailed information about Java technology-based applications 
         (Java applications) while they are running on a Java Virtual Machine (JVM).
         VisualVM organizes data about the JVM software  that is retrieved by the Java Development Kit (JDK) tools and presents the information in a way that
