--- a/www/docindex.html
+++ b/www/docindex.html
@@ -41,7 +41,7 @@
                 </p>
                 
                 <ul>
-                    <li><a href="gettingstarted.html">Getting Started with VisualVM</a></li>
+                    <li><a href="gettingstarted.html">Getting Started with VisualVM</a> <small>(<a href="ja/gettingstarted.html">Japanese</a>, <a href="zh_CN/gettingstarted.html">Simplified Chinese</a>)</small></li>
                     <li><a href="api-quickstart.html">Getting Started Extending VisualVM</a></li>
                 </ul>
             </div>
@@ -53,7 +53,7 @@
                 </p>
                 
                 <ul>
-                <li><a href="intro.html">Introduction to VisualVM</a>
+                <li><a href="intro.html">Introduction to VisualVM</a> <small>(<a href="ja/intro.html">Japanese</a>, <a href="zh_CN/intro.html">Simplified Chinese</a>)</small>
                 <ul>
                 <li><a href="applications_window.html">Using the Applications Window</a></li>
                 <li><a href="applications_local.html">Working with Local Applications</a>
