--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -8,7 +8,8 @@
         <hr>
 
         <p>
-            <small>Note: this page is also available in <a href="ja/gettingstarted.html">Japanese</a> and <a href="zh_CN/gettingstarted.html">Simplified Chinese</a>.</small>
+            <small>Note: this page is also available in <a href="ja/gettingstarted.html">Japanese <img src="ja/images/japanese.png" style="border: 0px; vertical-align: bottom;"/></a>
+            and <a href="zh_CN/gettingstarted.html">Simplified Chinese <img src="zh_CN/images/simplified_chinese.png" style="border: 0px; vertical-align: bottom;"/></a>.</small>
         </p>
 
         <p>VisualVM provides detailed information about Java applications while they are running on the Java Virutal Machine (JVM). 
