--- a/www/intro.html
+++ b/www/intro.html
@@ -8,7 +8,8 @@
         <hr />
 
         <p>
-            <small>Note: this page is also available in <a href="ja/intro.html">Japanese</a> and <a href="zh_CN/intro.html">Simplified Chinese</a>.</small>
+            <small>Note: this page is also available in <a href="ja/intro.html">Japanese <img src="ja/images/japanese.png" style="border: 0px; vertical-align: bottom;"/></a>
+            and <a href="zh_CN/intro.html">Simplified Chinese <img src="zh_CN/images/simplified_chinese.png" style="border: 0px; vertical-align: bottom;"/></a>.</small>
         </p>
 
         <p>VisualVM is a tool that provides a visual interface for viewing detailed information about Java technology-based applications 
