Updating On The Web
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1851 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/ontheweb.html
+++ b/www/ontheweb.html
@@ -91,6 +91,7 @@
             <a name="ontheweb"></a>
             <h3>On The Web</h3>
             <div class="ontheweb" style="padding-bottom: 20px;">
+                <div><span class="ontheweb_date">[en] Feb 4th, 2009</span><a class="ontheweb_title" href="http://java-monitor.com/forum/showthread.php?t=205">Enabling JMX for Tomcat running as a Windows service</a>, tech tip on Java-Monitor.</div>
                 <div><span class="ontheweb_date">[en] Jan 26th, 2009</span><a class="ontheweb_title" href="http://twitter.com/happygiraffe/status/1148927426">Liking visualvm a lot</a>, twitter message by a happy VisualVM user :o)</div>
                 <div><span class="ontheweb_date">[en] Jan 22nd, 2009</span><a class="ontheweb_title" href="http://blogs.sun.com/nbprofiler/entry/monitoring_java_processes_running_as">Monitoring Java Processes Running As a Windows Service</a>, tech tip on The NetBeans Profiler Blog.</div>
                 <div><span class="ontheweb_date">[en] Jan 14th, 2009</span><a class="ontheweb_title" href="http://e.blip.tv/scripts/flash/showplayer.swf?file=http://blip.tv/rss/flash/1591181&showplayerpath=http://blip.tv/scripts/flash/showplayer.swf&feedurl=http://kg.blip.tv/rss/flash&brandname=blip.tv&brandlink=http://blip.tv/%3Futm_source%3Dbrandlink&enablejs=true">Introduction to Java VisualVM</a>, a screencast originally published at java.sun.com.</div>
