Changing a reference to 6.0/6.1, so that it says 6.x instead.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1855 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -185,7 +185,7 @@
             create need to therefore also make use of JDK 6 and
             not any earlier version of the JDK.
             
-            <li><b>Install NetBeans IDE 6.0/6.1.</b> Though you are free to use
+            <li><b>Install NetBeans IDE 6.x.</b> Though you are free to use
             any editor or IDE to develop VisualVM plugins, NetBeans IDE
             is optimized for plugin development for VisualVM. For example,
             the VisualVM plugin project structure, as well as several
