Blogging Contest promotion mockup
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1857 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/gettingstarted_blogcontest.html
+++ b/www/gettingstarted_blogcontest.html
@@ -20,9 +20,9 @@
         </p>
 
         <div class="spotlight">
-            <div>Coming from the VisualVM Blogging Contest page?</div>
-            <div>Want to share your knowledge with the VisualVM community and be awarded?</div>
-            <div><b>Be sure to return to <a href="#">www.whatever.com</a> and enter the Contest!</b></div>
+            <div>Coming from the Java VisualVM Blogging Contest page?</div>
+            <div>Want to share your knowledge with the community and be awarded?</div>
+            <div><b>Be sure to return to <a href="http://java.sun.com/community/javavisualvm/index.html">http://java.sun.com/community/javavisualvm/index.html</a> and enter the Contest!</b></div>
         </div>
 
         <p>VisualVM provides detailed information about Java applications while they are running on the Java Virutal Machine (JVM). 
@@ -167,9 +167,9 @@
         </ul>
 
         <div class="spotlight">
-            <div>Coming from the VisualVM Blogging Contest page?</div>
-            <div>Want to share your knowledge with the VisualVM community and be awarded?</div>
-            <div><b>Be sure to return to <a href="#">www.whatever.com</a> and enter the Contest!</b></div>
+            <div>Coming from the Java VisualVM Blogging Contest page?</div>
+            <div>Want to share your knowledge with the community and be awarded?</div>
+            <div><b>Be sure to return to <a href="http://java.sun.com/community/javavisualvm/index.html">http://java.sun.com/community/javavisualvm/index.html</a> and enter the Contest!</b></div>
         </div>
     </body>
 </html>
