--- a/www/index_blogcontest.html
+++ b/www/index_blogcontest.html
@@ -39,20 +39,20 @@
     <div id="contents_contents">
         <div id="contents_main">
 
-            <h3>VisualVM Blogging Contest</h3>
+            <h3>Java VisualVM Blogging Contest</h3>
             <div id="spotlight" style="padding-left: 10px; padding-right: 10px;">
-                <p>No matter if you are new to VisualVM or if you a VisualVM power user,
-                we want to hear from you! Simply use VisualVM, blog about it, and you could win
+                <p>No matter if you are new to Java VisualVM or if you are Java VisualVM power user,
+                we want to hear from you! Simply use the tool, blog about it, and you could win
                 a $500 gift certificate!</p>
-                <p><b>Enter the VisualVM Blogging Contest at <a href="#">www.whatever.com</a> now!</b></p>
+                <p><b>Enter the Java VisualVM Blogging Contest at <a href="http://java.sun.com/community/javavisualvm/index.html">http://java.sun.com/community/javavisualvm/index.html</a> now!</b></p>
             </div>
 
             <h3>News</h3>
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
-                <p><span class="news_date">XXXXX XXth, 2009:</span> VisualVM Blogging Contest announced. The bloggers can enter the
-                contest at <a href="#">www.whatever.com</a> and win up to $500 gift certificate! The blogging period is from XXXXX XXth to
+                <p><span class="news_date">XXXXX XXth, 2009:</span> Java VisualVM Blogging Contest announced. The bloggers can enter the
+                contest at <a href="http://java.sun.com/community/javavisualvm/index.html">http://java.sun.com/community/javavisualvm/index.html</a> and win up to $500 gift certificate! The blogging period is from XXXXX XXth to
                 XXX XXth, winners will be announced on XXXX, XXth.
                 </p>
 
