--- a/www/index_blogcontest_1.html
+++ b/www/index_blogcontest_1.html
@@ -41,7 +41,7 @@
         <div id="contents_main">
 
             <h3>Java VisualVM Blogging Contest</h3>
-            <div style="padding-bottom: 10px; padding-top: 10px; margin-bottom: 20px; border: 1px solid #8bb3d9; border-top: 0px;">
+            <div style="padding: 10px; margin-bottom: 20px; border: 1px solid #8bb3d9; border-top: 0px;">
                 <!-- BEGIN L1 COMPONENT V.0 -->
                 <!-- BEGIN 033009-15412726 VISUALVM BLOGGING CONTEST -->
                 <div class="l1"><div class="cornerBR">
