--- a/www/index_blogcontest_2.html
+++ b/www/index_blogcontest_2.html
@@ -41,8 +41,8 @@
 
             <h3>Java VisualVM Blogging Contest</h3>
             <div style="padding-bottom: 10px; padding-top: 10px; margin-bottom: 20px; border: 1px solid #8bb3d9; border-top: 0px; background: #f0f1f2;">
-                <img style="float: left; margin: 15px; margin-top: 10px; margin-bottom: 5px;" border="0" src="http://www.sun.com/images/l2/l2_visualvm-contest.gif"/>
-                <div style="padding: 10px;">
+                <img style="float: left; margin: 15px; margin-top: 10px; margin-bottom: 0px;" border="0" src="http://www.sun.com/images/l2/l2_visualvm-contest.gif"/>
+                <div style="padding: 10px; padding-bottom: 0px;">
                     No matter if you are new to Java VisualVM or if you are Java VisualVM power user,
                     we want to hear from you! Simply use the tool, blog about it, and you could win
                     a $500 gift certificate!<br><br>
