--- a/www/index_blogcontest_0.html
+++ b/www/index_blogcontest_0.html
@@ -40,7 +40,7 @@
     <div id="contents_contents">
         <div id="contents_main">
 
-            <div style="margin-top: 0px; margin-bottom: 10px;">
+            <div style="margin-bottom: 20px;">
 
             <!-- BEGIN L1 COMPONENT V.0 -->
             <!-- BEGIN 033009-15412726 VISUALVM BLOGGING CONTEST -->
