--- a/www/gettingstarted_blogcontest.html
+++ b/www/gettingstarted_blogcontest.html
@@ -5,7 +5,8 @@
         <style>
            .spotlight {
                 padding: 10px;
-                margin-bottom: 10px;
+                margin-top: 20px;
+                margin-bottom: 20px;
                 background: #f0f1f2;
             }
         </style>
