Releasing Java ME Profiler Snapshot Viewer plugin.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1879 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -55,6 +55,12 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">May 25th, 2009:</span> Java ME Profiler Snapshot Viewer module published
+                on the Plugin Center for VisualVM 1.1 and VisualVM 1.1.1. It allows to display and browse performance
+                snapshots created by the Java ME SDK 3.0. Details about the plugin are available
+                <a href="http://blogs.sun.com/javamesdk/entry/visualvm_understands_java_me_profiler">here</a>.
+                </p>
+
                 <p><span class="news_date">April 23rd, 2009:</span> Java VisualVM Blogging Contest has been started at
                 <a href="http://java.sun.com/community/javavisualvm">http://java.sun.com/community/javavisualvm</a>.
                 You can win up to USD $500 if you enter the contest and blog about VisualVM or Java VisualVM till June 24th, 2009!
@@ -64,10 +70,6 @@
                     Japanese (ja) and Simplified Chinese (zh_CN). Also the Introduction to VisualVM (<a href="https://visualvm.dev.java.net/ja/intro.html">ja</a>, <a href="https://visualvm.dev.java.net/zh_CN/intro.html">cn</a>) and
                     Getting Started with VisualVM (<a href="https://visualvm.dev.java.net/ja/gettingstarted.html">ja</a>, <a href="https://visualvm.dev.java.net/zh_CN/gettingstarted.html">cn</a>) documents have been translated.
                     The localized build can be downloaded from the <a href="download.html">Download</a> page.
-                </p>
-
-                <p><span class="news_date">February 23rd, 2009:</span> Visual GC Plugin 2.0 is now available for all VisualVM / Java VisualVM releases via the Plugin Center.
-                    More information about the tool can be found on <a href="http://java.sun.com/performance/jvmstat/visualgc.html">Visual GC home page</a>.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
