--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,10 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">February 23rd, 2009:</span> Visual GC Plugin 2.0 is now available for all VisualVM / Java VisualVM releases via the Plugin Center.
+                    More information about the tool can be found on <a href="http://java.sun.com/performance/jvmstat/visualgc.html">Visual GC home page</a>.
+                </p>
+
                 <p><span class="news_date">February 5th, 2009:</span> VisualVM-Extensions plugin has been updated to correctly recognize applications running on JDK 6 Update 12.
                     The update is available on Plugin Center for all affected VisualVM / Java VisualVM versions. Use Tools -> Plugins to download and install the update.
                 </p>
