--- a/www/plugins.html
+++ b/www/plugins.html
@@ -126,6 +126,11 @@
                 Allows to minimize/restore running VisualVM instance into/from system tray. Not supported on Mac OS X (does nothing).<br>
                 <i>Available on VisualVM Plugin Center</i>
                 </p>
+
+                <p><a href="images/meviewer.jpg" rel="lightbox[plugins]" title="Java ME Profiler Snapshot Viewer."><img src="images/meviewer_small.png"/></a><b>Java ME Profiler Snapshot Viewer.</b>
+                Allows to open Java ME SDK profiler file in VisualVM.<br>
+                <i>Available on VisualVM Plugin Center</i>
+                </p>
                 
                 <h4>In Development</h4>
 
