--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,12 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">April 1st, 2009:</span> Multi-language version of VisualVM 1.1.1 released, now supports
+                    Japanese (ja) and Simplified Chinese (zh_CN). Also the Introduction to VisualVM (<a href="https://visualvm.dev.java.net/ja/intro.html">ja</a>, <a href="https://visualvm.dev.java.net/zh_CN/intro.html">cn</a>) and
+                    Getting Started with VisualVM (<a href="https://visualvm.dev.java.net/ja/gettingstarted.html">ja</a>, <a href="https://visualvm.dev.java.net/zh_CN/gettingstarted.html">cn</a>) documents have been translated.
+                    The localized build can be downloaded from the <a href="download.html">Download</a> page.
+                </p>
+
                 <p><span class="news_date">February 23rd, 2009:</span> Visual GC Plugin 2.0 is now available for all VisualVM / Java VisualVM releases via the Plugin Center.
                     More information about the tool can be found on <a href="http://java.sun.com/performance/jvmstat/visualgc.html">Visual GC home page</a>.
                 </p>
