--- a/www/releases.html
+++ b/www/releases.html
@@ -83,7 +83,7 @@
                             </td>
 
                             <td>
-                                <div>not released yet</div>
+                                <div><b>JDK 6 Update 14</b><br><small style="margin-left: 10px;">Released: May 28th, 2009, <a href="http://java.sun.com/javase/6/webnotes/6u14.html">Release Notes</a></small></div>
                             </td>
                         </tr>
 
