--- a/www/index.html
+++ b/www/index.html
@@ -55,6 +55,11 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">May 28th, 2009:</span> JDK 6 Update 14 released, it contains Java VisualVM tool
+                    based on the recent stable VisualVM 1.1.1. Latest Sun JDK 6 update can be downloaded
+                    <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
+                </p>
+
                 <p><span class="news_date">May 25th, 2009:</span> Java ME Profiler Snapshot Viewer module published
                 on the Plugin Center for VisualVM 1.1 and VisualVM 1.1.1. It allows to display and browse performance
                 snapshots created by the Java ME SDK 3.0. Details about the plugin are available
@@ -64,12 +69,6 @@
                 <p><span class="news_date">April 23rd, 2009:</span> Java VisualVM Blogging Contest has been started at
                 <a href="http://java.sun.com/community/javavisualvm">http://java.sun.com/community/javavisualvm</a>.
                 You can win up to USD $500 if you enter the contest and blog about VisualVM or Java VisualVM till June 24th, 2009!
-                </p>
-
-                <p><span class="news_date">April 1st, 2009:</span> Multi-language version of VisualVM 1.1.1 released, now supports
-                    Japanese (ja) and Simplified Chinese (zh_CN). Also the Introduction to VisualVM (<a href="https://visualvm.dev.java.net/ja/intro.html">ja</a>, <a href="https://visualvm.dev.java.net/zh_CN/intro.html">cn</a>) and
-                    Getting Started with VisualVM (<a href="https://visualvm.dev.java.net/ja/gettingstarted.html">ja</a>, <a href="https://visualvm.dev.java.net/zh_CN/gettingstarted.html">cn</a>) documents have been translated.
-                    The localized build can be downloaded from the <a href="download.html">Download</a> page.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
