Slides & sources for J1 2009 BOF 7424
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1899 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,11 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">April 23rd, 2009:</span> Java VisualVM Blogging Contest has been started at
+                    <a href="http://java.sun.com/community/javavisualvm">http://java.sun.com/community/javavisualvm</a>.
+                    You can win up to USD $500 if you enter the contest and blog about VisualVM or Java VisualVM till June 24th, 2009!
+                </p>
+
                 <p><span class="news_date">April 1st, 2009:</span> Multi-language version of VisualVM 1.1.1 released, now supports
                     Japanese (ja) and Simplified Chinese (zh_CN). Also the Introduction to VisualVM (<a href="https://visualvm.dev.java.net/ja/intro.html">ja</a>, <a href="https://visualvm.dev.java.net/zh_CN/intro.html">cn</a>) and
                     Getting Started with VisualVM (<a href="https://visualvm.dev.java.net/ja/gettingstarted.html">ja</a>, <a href="https://visualvm.dev.java.net/zh_CN/gettingstarted.html">cn</a>) documents have been translated.
