--- a/www/index.html
+++ b/www/index.html
@@ -55,20 +55,22 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">June 4th, 2009:</span> JavaOne 2009 slides for BOF 7424
+                    &quot;Monitoring and Troubleshooting Java&trade; Platform Applications with JDK&trade; Software&quot;
+                    are now available as a <a href="https://www.dev.java.net/files/documents/7163/136051/JavaOne-2009-BOF-7424.pdf">.pdf document</a>,
+                    you can also get sources for the <a href="https://visualvm.dev.java.net/files/documents/7163/136080/VisualVM_BOF-7424.zip">
+                    demo applications</a> (NetBeans project).
+                </p>
+
                 <p><span class="news_date">May 28th, 2009:</span> JDK 6 Update 14 released, it contains Java VisualVM tool
                     based on the recent stable VisualVM 1.1.1. Latest Sun JDK 6 update can be downloaded
                     <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
                 </p>
 
                 <p><span class="news_date">May 25th, 2009:</span> Java ME Profiler Snapshot Viewer module published
-                on the Plugin Center for VisualVM 1.1 and VisualVM 1.1.1. It allows to display and browse performance
-                snapshots created by the Java ME SDK 3.0. Details about the plugin are available
+                    on the Plugin Center for VisualVM 1.1 and VisualVM 1.1.1. It allows to display and browse performance
+                    snapshots created by the Java ME SDK 3.0. Details about the plugin are available
                 <a href="http://blogs.sun.com/javamesdk/entry/visualvm_understands_java_me_profiler">here</a>.
-                </p>
-
-                <p><span class="news_date">April 23rd, 2009:</span> Java VisualVM Blogging Contest has been started at
-                <a href="http://java.sun.com/community/javavisualvm">http://java.sun.com/community/javavisualvm</a>.
-                You can win up to USD $500 if you enter the contest and blog about VisualVM or Java VisualVM till June 24th, 2009!
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
