--- a/www/index.html
+++ b/www/index.html
@@ -57,8 +57,8 @@
 
                 <p><span class="news_date">June 4th, 2009:</span> JavaOne 2009 slides for BOF-4724
                     &quot;Monitoring and Troubleshooting Java&trade; Platform Applications with JDK&trade; Software&quot;
-                    are now available as a <a href="https://www.dev.java.net/files/documents/7163/136051/JavaOne-2009-BOF-7424.pdf">.pdf document</a>,
-                    you can also get sources for the <a href="https://visualvm.dev.java.net/files/documents/7163/136080/VisualVM_BOF-7424.zip">
+                    are now available as a <a href="https://visualvm.dev.java.net/files/documents/7163/136082/JavaOne-2009-BOF-4724.pdf">.pdf document</a>,
+                    you can also get sources for the <a href="https://visualvm.dev.java.net/files/documents/7163/136081/VisualVM_BOF-4724.zip">
                     demo applications</a> (NetBeans project).
                 </p>
 
