Apple Java VisualVM release announcement
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1936 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -55,6 +55,14 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">June 15th, 2009:</span> Apple released Java VisualVM
+                    as part of Java for Mac OS X 10.5 Update 4. The Java update is available via
+                    Software Update or as a manual download from
+                    <a href="http://support.apple.com/downloads/Java_for_Mac_OS_X_10_5_Update_4">
+                    http://support.apple.com/downloads/Java_for_Mac_OS_X_10_5_Update_4</a>.
+                    To launch Java VisualVM, run <code>jvisualvm</code> from the command line.
+                </p>
+
                 <p><span class="news_date">June 4th, 2009:</span> JavaOne 2009 slides for BOF-4724
                     &quot;Monitoring and Troubleshooting Java&trade; Platform Applications with JDK&trade; Software&quot;
                     are now available as a <a href="https://visualvm.dev.java.net/files/documents/7163/136082/JavaOne-2009-BOF-4724.pdf">.pdf document</a>,
@@ -65,12 +73,6 @@
                 <p><span class="news_date">May 28th, 2009:</span> JDK 6 Update 14 released, it contains Java VisualVM tool
                     based on the recent stable VisualVM 1.1.1. Latest Sun JDK 6 update can be downloaded
                     <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
-                </p>
-
-                <p><span class="news_date">May 25th, 2009:</span> Java ME Profiler Snapshot Viewer module published
-                    on the Plugin Center for VisualVM 1.1 and VisualVM 1.1.1. It allows to display and browse performance
-                    snapshots created by the Java ME SDK 3.0. Details about the plugin are available
-                <a href="http://blogs.sun.com/javamesdk/entry/visualvm_understands_java_me_profiler">here</a>.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
