--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,12 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">May 25th, 2009:</span> Java ME Profiler Snapshot Viewer module published
+                    on the Plugin Center for VisualVM 1.1 and VisualVM 1.1.1. It allows to display and browse performance
+                    snapshots created by the Java ME SDK 3.0. Details about the plugin are available
+                <a href="http://blogs.sun.com/javamesdk/entry/visualvm_understands_java_me_profiler">here</a>.
+                </p>
+
                 <p><span class="news_date">April 23rd, 2009:</span> Java VisualVM Blogging Contest has been started at
                     <a href="http://java.sun.com/community/javavisualvm">http://java.sun.com/community/javavisualvm</a>.
                     You can win up to USD $500 if you enter the contest and blog about VisualVM or Java VisualVM till June 24th, 2009!
