Releasing Buffer Monitor plugin.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1943 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -55,6 +55,11 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">June 23rd, 2009:</span> The Buffer Monitor plugin has been released on VisualVM 1.1.1 Plugin Center.
+                The plugin enables monitoring usage of direct buffers created by <code>ByteBuffer.allocateDirect</code> and mapped buffers created
+                by <code>FileChannel.map</code>. The monitored application must run JDK 7 starting from Build 36.
+                </p>
+
                 <p><span class="news_date">June 15th, 2009:</span> Apple released Java VisualVM
                     as part of Java for Mac OS X 10.5 Update 4. The Java update is available via
                     Software Update or as a manual download from
@@ -68,11 +73,6 @@
                     are now available as a <a href="https://visualvm.dev.java.net/files/documents/7163/136082/JavaOne-2009-BOF-4724.pdf">.pdf document</a>,
                     you can also get sources for the <a href="https://visualvm.dev.java.net/files/documents/7163/136081/VisualVM_BOF-4724.zip">
                     demo applications</a> (NetBeans project).
-                </p>
-
-                <p><span class="news_date">May 28th, 2009:</span> JDK 6 Update 14 released, it contains Java VisualVM tool
-                    based on the recent stable VisualVM 1.1.1. Latest Sun JDK 6 update can be downloaded
-                    <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
