--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,11 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">May 28th, 2009:</span> JDK 6 Update 14 released, it contains Java VisualVM tool
+                    based on the recent stable VisualVM 1.1.1. Latest Sun JDK 6 update can be downloaded
+                    <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
+                </p>
+
                 <p><span class="news_date">May 25th, 2009:</span> Java ME Profiler Snapshot Viewer module published
                     on the Plugin Center for VisualVM 1.1 and VisualVM 1.1.1. It allows to display and browse performance
                     snapshots created by the Java ME SDK 3.0. Details about the plugin are available
