Removing Blogging contest banner from the frontpage
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1947 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -39,16 +39,11 @@
     <div id="contents_contents">
         <div id="contents_main">
 
-            <h3>Java VisualVM Blogging Contest</h3>
-            <div style="padding-bottom: 10px; padding-top: 10px; margin-bottom: 20px; border: 1px solid #8bb3d9; border-top: 0px; background: #f0f1f2;">
-                <img style="float: left; margin: 15px; margin-top: 5px; margin-bottom: 0px;" border="0" src="http://www.sun.com/images/l2/l2_visualvm-contest.gif"/>
-                <div style="padding: 10px; padding-bottom: 0px; padding-top: 5px;">
-                    No matter if you are new to Java VisualVM or if you are Java VisualVM power user,
-                    we want to hear from you! Simply use the tool, blog about it, and you could win
-                    USD $500 gift certificate!<br><br>
-                    <b>Enter the Java VisualVM Blogging Contest at <a href="http://java.sun.com/community/javavisualvm">http://java.sun.com/community/javavisualvm</a> now!</b>
-                </div>
-                <div style="clear: both; visibility: hidden;"></div>
+            <h3>VisualVM Is Designed For You</h3>
+            <div id="spotlight">
+                <div><b>Application Developer:</b> Monitor, profile, take thread dumps, browse heap dumps</div>
+                <div><b>System Administrator:</b> Monitor and control Java applications across the entire network</div>
+                <div><b>Java Application User:</b> Create bug reports containing all the necessary information</div>
             </div>
 
             <h3>News</h3>
