Updating On The Web
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2078 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,13 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">June 4th, 2009:</span> JavaOne 2009 slides for BOF-4724
+                    &quot;Monitoring and Troubleshooting Java&trade; Platform Applications with JDK&trade; Software&quot;
+                    are now available as a <a href="https://visualvm.dev.java.net/files/documents/7163/136082/JavaOne-2009-BOF-4724.pdf">.pdf document</a>,
+                    you can also get sources for the <a href="https://visualvm.dev.java.net/files/documents/7163/136081/VisualVM_BOF-4724.zip">
+                    demo applications</a> (NetBeans project).
+                </p>
+
                 <p><span class="news_date">May 28th, 2009:</span> JDK 6 Update 14 released, it contains Java VisualVM tool
                     based on the recent stable VisualVM 1.1.1. Latest Sun JDK 6 update can be downloaded
                     <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
