Releasing VisualVM 1.2 Test Build
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2209 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,15 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">October 5th, 2009:</span> VisualVM 1.2 Test Build released as a public development
+                    build for testing and evaluation purposes (see the <a href="relnotes12tb.html">Release Notes</a>).
+                    <a href="https://visualvm.dev.java.net/files/documents/7163/143769/visualvm_12_testbuild.zip">Download it</a>,
+                    try out the new features and let the developers know: send your feedback to
+                    <a href="mailto:feedback@visualvm.dev.java.net?subject=VisualVM 1.2 Test Build Feedback">feedback@visualvm.dev.java.net</a>
+                    or <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">file a bug report</a> into
+                    the Issue Tracker (dev.java.net login is required).
+                </p>
+
                 <p><span class="news_date">August 13th, 2009:</span> Java VisualVM Blogging Contest results have been
                     announced at <a href="http://java.sun.com/community/javavisualvm">http://java.sun.com/community/javavisualvm</a>.
                     Congratulations to the winners and thanks to all participants!
@@ -58,14 +67,6 @@
                 <p><span class="news_date">June 23rd, 2009:</span> The Buffer Monitor plugin has been released on VisualVM 1.1.1 Plugin Center.
                 The plugin enables monitoring usage of direct buffers created by <code>ByteBuffer.allocateDirect</code> and mapped buffers created
                 by <code>FileChannel.map</code>. The monitored application must run JDK 7 starting from Build 36.
-                </p>
-
-                <p><span class="news_date">June 15th, 2009:</span> Apple released Java VisualVM
-                    as part of Java for Mac OS X 10.5 Update 4. The Java update is available via
-                    Software Update or as a manual download from
-                    <a href="http://support.apple.com/downloads/Java_for_Mac_OS_X_10_5_Update_4">
-                    http://support.apple.com/downloads/Java_for_Mac_OS_X_10_5_Update_4</a>.
-                    To launch Java VisualVM, run <code>jvisualvm</code> from the command line.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
