--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,14 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">June 15th, 2009:</span> Apple released Java VisualVM
+                    as part of Java for Mac OS X 10.5 Update 4. The Java update is available via
+                    Software Update or as a manual download from
+                    <a href="http://support.apple.com/downloads/Java_for_Mac_OS_X_10_5_Update_4">
+                    http://support.apple.com/downloads/Java_for_Mac_OS_X_10_5_Update_4</a>.
+                    To launch Java VisualVM, run <code>jvisualvm</code> from the command line.
+                </p>
+
                 <p><span class="news_date">June 4th, 2009:</span> JavaOne 2009 slides for BOF-4724
                     &quot;Monitoring and Troubleshooting Java&trade; Platform Applications with JDK&trade; Software&quot;
                     are now available as a <a href="https://visualvm.dev.java.net/files/documents/7163/136082/JavaOne-2009-BOF-4724.pdf">.pdf document</a>,
