VisualVM 1.2 Test Build download
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2219 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/download.html
+++ b/www/download.html
@@ -57,6 +57,9 @@
                 <div><a href="https://visualvm.dev.java.net/files/documents/7163/127064/visualvm_111.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM 1.1.1</span></a> (.zip, 8.8MB)<span style="margin-left: 15px; margin-right: 15px;">|</span>IDE integration: <a href="eclipse-launcher.html">Eclipse IDE</a>, <a href="http://plugins.intellij.net/plugin/?id=3749">IntelliJ IDEA</a> <small>(3<sup>rd</sup> party)</small></div>
                 <div style="padding-top: 2px;"><small><a href="https://visualvm.dev.java.net/files/documents/7163/131458/visualvm_111-ml.zip"><b>Multi-language</b></a> (.zip, 9.7MB, en/ja/zh_CN)</small></div>
             </div>
+            <div style="margin-top: 10px; margin-bottom: 15px; margin-left:20px;">
+                <small><a href="https://visualvm.dev.java.net/files/documents/7163/143769/visualvm_12_testbuild.zip">VisualVM 1.2 Test Build</a> (.zip, 9.6MB)<span style="margin-left: 10px; margin-right: 10px;">|</span><a href="https://visualvm.dev.java.net/relnotes12tb.html">Release Notes</a></small>
+            </div>
             
             <a style="clear: both;" name="first_steps"></a>
             <h3>First Steps</h3>
