Updated troubleshooting on Downloads page
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2281 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/download.html
+++ b/www/download.html
@@ -99,6 +99,11 @@
                         <i>VisualVM startup terminates by Error Starting VisualVM Dialog - unsupported version of Java: </i>this typically happens when JRE or incorrect JDK version is used to run VisualVM,
                         make sure VisualVM is running on Sun JDK 6+
                     </li>
+
+                    <li>
+                        <i>VisualVM startup terminates by Warning - could not install some modules message: </i>this can happen if you unzip the VisualVM archive over
+                        an older VisualVM version, make sure you are unzipping the VisualVM to a new directory
+                    </li>
                     
                     <li>
                         <i>Local Applications Cannot Be Detected dialog is shown after VisualVM startup: </i>this can happen on Windows systems, see the <a href="troubleshooting.html#jpswin">Troubleshooting Guide</a>
