Updated Release Notes to mention recently found bug in new charts:o(
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2282 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/relnotes.html
+++ b/www/relnotes.html
@@ -223,6 +223,9 @@
                     <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=148">Issue 148</a>: VisualVM hangs when lost remote connection
                     </li>
 
+                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=327">Issue 327</a>: Maximum value in Monitor charts is Integer.MAX_VALUE
+                    </li>
+
                     <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=120">Issue 120</a>: JMX application datasource cannot be reused on application restart
                     </li>
                     
